# lebensmittel

./: README.md  pyproject.toml
src/lebensmittel/: classes.py
