[project]
name = "lebensmittel"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "textual==0.88.1",
    "textual-serve>=1.1.1",
    "httpx>=0.28.1",
    "textual-autocomplete~=2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "textual==0.88.1",
    "textual-serve>=1.1.1",
]

[tool.rye.scripts]
# textual = "src:lebensmittel:dictionary:main"

[project.scripts]
# textual = "dictionary:main"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lebensmittel"]
